---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ARRAY[1,2,22.7]::integer[];"
---
SelectStmt@0..34
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..31
    TypeCast@7..31
      AArrayExpr@7..21
        Array@7..12 "ARRAY"
        Ascii91@12..13 "["
        AConst@13..14
          Iconst@13..14 "1"
        Ascii44@14..15 ","
        AConst@15..16
          Iconst@15..16 "2"
        Ascii44@16..17 ","
        AConst@17..21
          Fconst@17..21 "22.7"
      Ascii93@21..22 "]"
      Typecast@22..24 "::"
      TypeName@24..31
        Integer@24..31 "integer"
  Ascii91@31..32 "["
  Ascii93@32..33 "]"
  Ascii59@33..34 ";"

